--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,6 @@ body, .app {
   list-style-type: none;
   padding: 0;
   margin: 0;
-
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -121,6 +120,7 @@ body, .app {
 
 .book {
   width: 140px;
+  padding-right: 300px;
 }
 .book-title,
 .book-authors {
